[package]
name = "google_api_auth"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-yup-oauth2 = ["yup-oauth2", "tokio"]

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
yup-oauth2 = { version = "^4.1", optional = true }
tokio = { version = "0.2", optional = true }
hyper = "^0.13"
